addd new table column

--- a/app/views/main/tequila.html.erb
+++ b/app/views/main/tequila.html.erb
@@ -65,6 +65,7 @@
 
 <table class="menu">
 	    <tr>
+    	<th><p class="card-title">Brans</p> </th>
     	<th> </th>
     	<th><p class="price">Glass</p></th>
     	<th><p class="price">Bottle</p></th>
