added brand to fix spacing on wine table

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -164,3 +164,13 @@ float: right;
   font: 100 30px/1.5 'Pacifico', Helvetica, sans-serif;
 
 }
+
+.glass {
+  color: white;
+  text-align: right;
+}
+
+.bottle {
+  color: white;
+  text-align: right;
+}
