--- a/app/views/main/tequila.html.erb
+++ b/app/views/main/tequila.html.erb
@@ -67,8 +67,8 @@
 	    <tr>
     	<th><p class="card-title">Brans</p> </th>
     	<th> </th>
-    	<th><p class="price">Glass</p></th>
-    	<th><p class="price">Bottle</p></th>
+    	<th><p class="glass">Glass</p></th>
+    	<th><p class="glass">Bottle</p></th>
     </tr>
 </table>
 
@@ -77,8 +77,8 @@
   <table class="menu">
     <tr>
       <th><p class="card-title"><%= wine_w.title %></p></th>
-      <th><p class="price"><%= wine_w.price %></p></th>
-      <th><p class="price"><%= wine_w.label %></p></th>
+      <th><p class="glass"><%= wine_w.price %></p></th>
+      <th><p class="bottle"><%= wine_w.label %></p></th>
     </tr>
   </table>
   <% end %>
