added padding to tables and added label table above red wine.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -144,6 +144,7 @@ float: right;
 .menu {
   width: 100%;
   background: sandybrown;
+  padding-left: 10px;
 }
 
 .price {
@@ -167,7 +168,7 @@ float: right;
 
 .glass {
   color: white;
-  text-align: center;
+  text-align: right;
 }
 
 .bottle {
