--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -50,7 +50,7 @@ h1, h2, h3, h4, h5, h6, p {
 }
 
 .card {
-    background: sandybrown;
+    background: black;
     }
 
 .menu-head {
@@ -69,7 +69,7 @@ h1, h2, h3, h4, h5, h6, p {
 .card-title {
    font: 100 25px/1.5 'Pacifico', Helvetica, sans-serif;
     color: white;
-    text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+    text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px orangered;
     padding-left: 15px;
 
 }
@@ -104,7 +104,7 @@ form {
     font: 100 60px/1.5 'Pacifico', Helvetica, sans-serif;
     color: orangered;
     text-shadow: -2px 0 black, 0 2px black, 2px 0 black, 0 -2px black;
-    background: none;
+    background: black;
     border-style: solid;
     border-top:  black;
     border-color: white;
@@ -143,7 +143,7 @@ float: right;
 
 .menu {
   width: 100%;
-  background: sandybrown;
+  background: black;
   padding-left: 10px;
 }
 
@@ -160,7 +160,7 @@ float: right;
 
 .michelada {
   color: white;
-  background: sandybrown;
+  background: black;
   text-align: center;
   font: 100 30px/1.5 'Pacifico', Helvetica, sans-serif;
 
