finished black background update

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -28,7 +28,8 @@ h1, h2, h3, h4, h5, h6, p {
 }
 
 .btn-warning {
-    background: sandybrown;
+    background: black;
+    color: white;
 }
  
 .btn-primary:hover, .btn-primary:focus, .btn-primary:active, .btn-primary.active, .open > .dropdown-toggle.btn-primary {
@@ -57,7 +58,7 @@ h1, h2, h3, h4, h5, h6, p {
   font: 100 40px/1.5 'Pacifico', Helvetica, sans-serif;
   color: orangered;
   text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
-  background: sandybrown;
+  background: black;
   border-style: solid;
     border-top:  black;
     border-color: white;
