--- a/app/views/main/menu.html.erb
+++ b/app/views/main/menu.html.erb
@@ -22,7 +22,7 @@
     <%= image_tag 'food02.jpg' %>
       <div class="card-block">
       <%= link_to "Lunch", lunch_path, class: "btn btn-warning" %>
-              <p class="card-test">Mon-Fri 11AM-3PM</p>
+              <p class="card-text">Mon-Fri 11AM-3PM</p>
 
   </div>
 </div>
