added padding to wine glass

--- a/app/views/main/tequila.html.erb
+++ b/app/views/main/tequila.html.erb
@@ -65,9 +65,9 @@
 
 <table class="menu">
 	    <tr>
-    	<th><p class="card-title">Brans</p> </th>
+    	<th><p class="card-title">Brand</p> </th>
     	<th> </th>
-    	<th><p class="glass">Glass</p></th>
+    	<th class="glass"><p class="glass">Glass</p></th>
     	<th><p class="glass">Bottle</p></th>
     </tr>
 </table>
@@ -89,9 +89,9 @@
 
 <table class="menu">
 	    <tr>
-    	<th><p class="card-title">Brans</p> </th>
+    	<th><p class="card-title">Brand</p> </th>
     	<th> </th>
-    	<th><p class="glass">Glass</p></th>
+    	<th class="glass"><p class="glass">Glass</p></th>
     	<th><p class="glass">Bottle</p></th>
     </tr>
 </table>
