fine tuned alignment of wine table.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -168,20 +168,20 @@ float: right;
 }
 
 .wine {
-  width: 75%;
+  width: 70%;
 }
 
 .glass {
   color: white;
-  padding-left: 50px;
+  padding-right: 5px;
   text-align: right;
-  width: 12%;
+  width: 15%;
 }
 
 .bottle {
   color: white;
   text-align: right;
-  width: 12%;
+  width: 15%;
 }
 
 th {
