--- a/app/views/main/tequila.html.erb
+++ b/app/views/main/tequila.html.erb
@@ -66,7 +66,7 @@
 
 <table class="menu">
 	    <tr>
-    	<th class="wine"><p class="card-title">Brand</p> </th>
+    	<th class="wine"><p class="card-title"></p> </th>
     	<th class="glass"><p class="glass">Glass</p></th>
     	<th class="bottle"><p class="bottle">Bottle</p></th>
     </tr>
@@ -77,8 +77,8 @@
   <table class="menu">
     <tr>
       <th class="wine"><p class="card-title"><%= wine_w.title %></p></th>
-      <th class="glass"><p class="glass"><%= wine_w.price %></p></th>
-      <th class="bottle"><p class="bottle"><%= wine_w.label %></p></th>
+      <th class="glass"><p class="glass">$<%= wine_w.price %></p></th>
+      <th class="bottle"><p class="bottle">$<%= wine_w.label %></p></th>
     </tr>
   </table>
   <% end %>
@@ -89,7 +89,7 @@
 
 <table class="menu">
 	    <tr>
-    	<th class="wine"><p class="card-title">Brand</p> </th>
+    	<th class="wine"><p class="card-title"></p> </th>
     	<th> </th>
     	<th class="glass"><p class="glass">Glass</p></th>
     	<th class="bottle"><p class="bottle">Bottle</p></th>
@@ -102,8 +102,8 @@
   <table class="menu">
     <tr>
       <th class="wine"><p class="card-title"><%= wine_r.title %></p></th>
-      <th class="glass"><p class="glass"><%= wine_r.price %></p></th>
-      <th class="bottle"><p class="bottle"><%= wine_r.label %></p></th>
+      <th class="glass"><p class="glass">$<%= wine_r.price %></p></th>
+      <th class="bottle"><p class="bottle">$<%= wine_r.label %></p></th>
     </tr>
   </table>
   <% end %>
