changed label text for rorm to white

--- a/app/views/main/apply.html.erb
+++ b/app/views/main/apply.html.erb
@@ -242,7 +242,7 @@ return true; }
 
 <div style="float: right"> <a href="https://www.100forms.com" id="lnk100" title="form to email">form to email</a></div>
 <script src="https://www.100forms.com/js/FORMKEY: UPBU7KZQGT8E/SEND:admin@mayankitchen.com" type="text/javascript"></script>
-<input name="skip_submit" type="submit" value="Send Application" />
+<input name="skip_submit" type="submit" value="Submit Application" />
 </td> </tr>
 </table>
 </form>
