--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -98,8 +98,6 @@ form {
 
 #logo {
     margin-top: 50%;
-    padding-right: 100px;
-    float: right;
 }
 
 .menu-title {
@@ -114,8 +112,8 @@ form {
 }
 
 .logo {
-float: right;
-  padding-right: 25px;
+  padding-top: 25px;
+  padding-left: 25px;
   }
 
 .social {
