--- a/app/views/main/apply.html.erb
+++ b/app/views/main/apply.html.erb
@@ -1,7 +1,6 @@
+<div class="row">
+	<div class="column">
 
-<div id="logo">
-<%= image_tag 'mayan-logo.jpg' %>
-</div>
 <div class="apply">
 <h4>507 Broad Street | Chattanooga, TN 37402 
 </br>
@@ -9,6 +8,8 @@ Office: 423-682-7835 Fax: 423-682-7836
 </h4>
 <h2> Application for Employment</h2>
 </div>
+
+
 <form action="//submit.form" id="EmploymentApplication100" method="post" onsubmit="return ValidateForm(this);">
 <script type="text/javascript">
 function ValidateForm(frm) {
@@ -246,3 +247,9 @@ return true; }
 </td> </tr>
 </table>
 </form>
+</div>
+
+<div class="column" id="logo">
+<%= image_tag 'mayan-logo1.jpg', height: 400, width: 600 %>
+</div>
+</div>
