--- a/app/views/main/home.html.erb
+++ b/app/views/main/home.html.erb
@@ -1,10 +1,10 @@
 <% content_for :head do %>
   <meta name="turbolinks-cache-control" content="no-cache">
 <% end %>
-  <h1 class="menu-title"> Welcome to Mayan Kitchen!</h1>
+
 
 <div class="logo">
-  <%= image_tag 'mayan-logo.png', height: 400, width: 550 %>
+  <%= image_tag 'mayan-logo1.jpg', height: 500, width: 900 %>
 </div>
 
 
