added price to white tequilla

--- a/app/views/main/tequila.html.erb
+++ b/app/views/main/tequila.html.erb
@@ -180,7 +180,7 @@
     <div class="col-sm-6 col-lg-4">
       <div class="card text-center">
         <div class="card block">
-          <h4 class="card-title"><%= tequila_w.title %></h4>
+          <h4 class="card-title"><%= tequila_w.title %>$<%= tequila_w.price %></h4>
         </div>
       </div>
     </div>
