added prices for all tequila

--- a/app/views/main/tequila.html.erb
+++ b/app/views/main/tequila.html.erb
@@ -180,7 +180,7 @@
     <div class="col-sm-6 col-lg-4">
       <div class="card text-center">
         <div class="card block">
-          <h4 class="card-title"><%= tequila_w.title %>$<%= tequila_w.price %></h4>
+          <h4 class="card-title"><%= tequila_w.title %>  $<%= tequila_w.price %></h4>
         </div>
       </div>
     </div>
@@ -198,7 +198,7 @@
     <div class="col-sm-6 col-lg-4">
       <div class="card text-center">
         <div class="card block">
-          <h4 class="card-title"><%= tequila_r.title %></h4>
+          <h4 class="card-title"><%= tequila_r.title %>  $<%= tequila_r.price %></h4>
         </div>
       </div>
     </div>
@@ -216,7 +216,7 @@
     <div class="col-sm-6 col-lg-4">
       <div class="card text-center">
         <div class="card block">
-          <h4 class="card-title"><%= tequila_a.title %></h4>
+          <h4 class="card-title"><%= tequila_a.title %>  $<%= tequila_a.price %></h4>
         </div>
       </div>
     </div>
@@ -234,7 +234,7 @@
     <div class="col-sm-6 col-lg-4">
       <div class="card text-center">
         <div class="card block">
-          <h4 class="card-title"><%= tequila_m.title %></h4>
+          <h4 class="card-title"><%= tequila_m.title %>  $<%= tequila_m.price %></h4>
         </div>
       </div>
     </div>
@@ -252,7 +252,7 @@
     <div class="col-sm-6 col-lg-4">
       <div class="card text-center">
         <div class="card block">
-          <h4 class="card-title"><%= tequila_p.title %></h4>
+          <h4 class="card-title"><%= tequila_p.title %>  $<%= tequila_p.price %></h4>
         </div>
       </div>
     </div>
@@ -270,7 +270,7 @@
     <div class="col-sm-6 col-lg-4">
       <div class="card text-center">
         <div class="card block">
-          <h4 class="card-title"><%= tequila_u.title %></h4>
+          <h4 class="card-title"><%= tequila_u.title %>  $<%= tequila_u.price %></h4>
         </div>
       </div>
     </div>
