added table format to tequila flights

--- a/app/views/main/tequila.html.erb
+++ b/app/views/main/tequila.html.erb
@@ -280,21 +280,18 @@
 
 <h2 class="menu-head"> Tequila Flights</h2>
 
-<div class="container">
-	<div class="row">
   <% @tequila_fs.each do |tequila_f| %>
-
-    <div class="col-sm-6 col-lg-4">
-      <div class="card text-center">
-        <div class="card block">
-          <h4 class="card-title"><%= tequila_f.title %></h4>
-          <p class="card-footer"> $<%= tequila_f.price %></p>
-        </div>
-      </div>
-    </div>
+  <table class="menu">
+    <tr>
+      <th><p class="card-title"><%= tequila_f.title %></p></th>
+      <th><p class="price">$<%= tequila_f.price %></p></th>
+    </tr>
+    <tr>
+      <th ><p class="description"><%= tequila_f.description %></p></th>
+    </tr>
+  </table>
   <% end %>
-</div>
-</div>
+
 
 <h1 class="menu-title">Spirits</h1>
 
