--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -7,7 +7,7 @@ body {
   background: black;
 }
 
-h1, h2, h3, h4, h5, h6, p {
+h1, h2, h3, h4, h5, h6, p, a {
   color: white;
 }
 
@@ -189,4 +189,17 @@ th {
 
 label {
   color: white;
+}
+
+iframe {
+  padding-right: 25px;
+}
+
+#address {
+  text-align: center;
+  padding-bottom: 50px;
+}
+
+#call {
+  padding-left: 75px;
 }
