--- a/app/views/main/home.html.erb
+++ b/app/views/main/home.html.erb
@@ -27,8 +27,20 @@
     });
   </script>
 
-<div class="container">
-<h2> 507 Broad Street </br> Chattanooga, TN 37402</h2>
+<div class="row">
+  <div class="column">
+<h2 id="address"> 507 Broad Street </br> Chattanooga, TN 37402</h2>
+
+<div id="call">
+<a class="btn btn-primary btn-xlg" href="tel:423-682-7835" style="padding:25px;background-color:orangered">
+   Click to Call <span class="glyphicon glyphicon-earphone" style="padding-left:10px; padding-right:10px;"></span>423-682-7835
+</a>
+</div>
+</div>
+
+<div class="column">
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3266.2441047349766!2d-85.31327692147057!3d35.050635672002045!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88605e6253590e9f%3A0x58dc5c4652d15155!2s507+Broad+St%2C+Chattanooga%2C+TN+37402!5e0!3m2!1sen!2sus!4v1508457545112" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+</div>
 </div>
 
 <h2 class="menu-title">Hours</h2></br>
