added padding to address. Added columns to menu items index.

--- a/app/views/menu_items/index.html.erb
+++ b/app/views/menu_items/index.html.erb
@@ -11,6 +11,9 @@
         <div class="card block">
           <h4 class="card-title"><%= menu_item.title %></h4>
           <p class="card-text"><%= menu_item.description %></p> 
+          <p class="card-text"><%= menu_item.price %></p>
+          <p class="card-text"><%= menu_item.type %></p>
+          <p class="card-text"><%= menu_item.label %></p>
         </div>
       </div>
     </div>
