--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -4,7 +4,7 @@
 </button>
 
 <!-- Brand -->
-<a class="navbar-brand" href="/">Mayan Kitchen</a>
+<a class="navbar-brand" href="/"><%= image_tag 'monkey.png', height: 100, width: 100 %></a>
 
 <!-- Links -->
 <div class="collapse navbar-collapse" id="nav-content">   
@@ -17,15 +17,15 @@
     <li>
     	<!-- Example split danger button -->
 <div class="btn-group">
-  <%= link_to "Menu", main_menu_path, class: "btn btn-primary" %>
+  <%= link_to "Menu", menu_path, class: "btn btn-primary" %>
   <button type="button" class="btn btn-primary dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
     <span class="sr-only">Toggle Dropdown</span>
   </button>
   <div class="dropdown-menu">
-    <%= link_to "Dinner", main_dinner_path, class: "dropdown-item"%>
-    <%= link_to "Lunch", main_lunch_path, class: "dropdown-item"%>
-    <%= link_to "Brunch", main_brunch_path, class: "dropdown-item"%>
-    <%= link_to "Dessert", main_dessert_path, class: "dropdown-item" %>
+    <%= link_to "Dinner", dinner_path, class: "dropdown-item"%>
+    <%= link_to "Lunch", lunch_path, class: "dropdown-item"%>
+    <%= link_to "Brunch", brunch_path, class: "dropdown-item"%>
+    <%= link_to "Dessert", dessert_path, class: "dropdown-item" %>
 </div>
 </li>
 
