--- a/app/views/main/home.html.erb
+++ b/app/views/main/home.html.erb
@@ -2,6 +2,7 @@
   <meta name="turbolinks-cache-control" content="no-cache">
 <% end %>
 
+<%= render 'layouts/header' %>
 
 <div class="logo">
   <%= image_tag 'mayan-logo1.jpg', height: 500, width: 900 %>
