centered logo on homepage

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -113,7 +113,9 @@ form {
 
 .logo {
   padding-top: 25px;
-  margin-left: 20%;
+  display: block;
+  margin: auto;
+  width: 40%;
   }
 
 .social {
