--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -113,9 +113,7 @@ form {
 
 .logo {
   padding-top: 25px;
-  display: block;
-  margin: auto;
-  width: 40%;
+  margin-left: 20%;
   }
 
 .social {
