centered logo on home page with botstrap

--- a/app/views/main/home.html.erb
+++ b/app/views/main/home.html.erb
@@ -4,10 +4,13 @@
 
 <%= render 'layouts/header' %>
 
-<div class="logo">
+<div class="row">
+  <div class="col-sm-4">
+    <div class="col-sm-4">
   <%= image_tag 'mayan-logo1.jpg', height: 500, width: 900 %>
 </div>
-
+</div>
+</div>
 
 <div class="row">
   <div class="col-sm-4"></div>
