moved social to about us row on home page

--- a/app/views/main/home.html.erb
+++ b/app/views/main/home.html.erb
@@ -110,7 +110,7 @@
 
 <div class="row">
 
-    <div class="col-sm-4">
+    <div class="col-sm-3">
       <div class="card text-center">
         <div class="card block">
           <h4 class="card-title">Visit Us!</h4>
@@ -122,11 +122,11 @@ Chattanooga, TN 37402</p>
     </div>
 
 
-    <div class="col-sm-4">
+    <div class="col-sm-3">
       <div class="card text-center">
         <div class="card block">
           <h4 class="card-title">Hours</h4>
-          <p class="card-title">Monday - Thursday</p>
+          <p class="card-title">Mon - Thur</p>
           <p class="card-text">11AM - 10PM</p>
           <p class="card-title">Friday</p>
           <p class="card-text">11AM - 12AM</p>
@@ -139,12 +139,12 @@ Chattanooga, TN 37402</p>
       </div>
     </div>
 
-    <div class="col-sm-4">
+    <div class="col-sm-3">
       <div class="card text-center">
         <div class="card block">
           <h4 class="card-title">Contact Us!</h4>
           <a class="btn btn-danger btn-xlg" href="tel:423-682-7835" style="padding:15px;">
-          Click to Call <span class="glyphicon glyphicon-earphone" style="padding-left:0px; padding-right:0px;"></span>423-682-7835
+          Call <span class="glyphicon glyphicon-earphone" style="padding-left:0px; padding-right:0px;"></span>423-682-7835
           </a>
           <p class="card-title">Join Our Team!</p>
           <%= link_to "Apply Now", apply_path, class: "btn btn-danger" %>
@@ -154,16 +154,19 @@ Chattanooga, TN 37402</p>
       </div>
     </div>
 
-</div>
 
-
-      <h2 class="menu-title"> Follow Us!</h2>
-      <div class="container">
-      <div class="social">
+    <div class="col-sm-3">
+      <div class="card text-center">
+        <div class="card block">
+          <h4 class="card-title">Follow Us!</h4>
+    <div class="container">
     <%= image_tag 'facebook.png' %>
     <%= image_tag 'twitter.png' %>
+  </div>
+        </div>
       </div>
     </div>
-  </div>
+
 </div>
-</div>
+
+
