--- a/app/views/main/home.html.erb
+++ b/app/views/main/home.html.erb
@@ -5,11 +5,10 @@
 <%= render 'layouts/header' %>
 
 <div class="row">
-  <div class="col-sm-4">
-    <div class="col-sm-4">
-  <%= image_tag 'mayan-logo1.jpg', height: 500, width: 900 %>
-</div>
-</div>
+  <div class="col-sm-3"></div>
+  <div class="col-sm-6">
+    <%= image_tag 'mayan-logo1.jpg', class: 'img-fluid' %>
+  </div>
 </div>
 
 <div class="row">
@@ -114,7 +113,7 @@
       <div class="card text-center">
         <div class="card block">
           <h4 class="card-title">Visit Us!</h4>
-          <p class="card-text">507 Broad Street 
+          <p class="card-text">507 Broad Street
 Chattanooga, TN 37402</p>
 
         </div>
@@ -168,5 +167,3 @@ Chattanooga, TN 37402</p>
     </div>
 
 </div>
-
-
