added address to top of header. Added drinks link to navbar.

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,3 +1,5 @@
+<h5 id="nav-address">507 Broad Street | Chattanooga, TN 37402 </h5>
+
 <nav class="navbar navbar-expand-sm navbar-dark" style="background: black; color: white;">
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#nav-content" aria-controls="nav-content" aria-expanded="false" aria-label="Toggle navigation">
 <span class="navbar-toggler-icon"></span>
@@ -26,6 +28,8 @@
     <%= link_to "Lunch", lunch_path, class: "dropdown-item"%>
     <%= link_to "Brunch", brunch_path, class: "dropdown-item"%>
     <%= link_to "Dessert", dessert_path, class: "dropdown-item" %>
+    <%= link_to "Drinks", drinks_path, class: "dropdown-item" %>
+
 </div>
 </li>
 
