--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -204,3 +204,9 @@ iframe {
 #call {
   margin-left: 20%;
 }
+
+#nav-address {
+  text-align: center;
+  padding-top: 5px;
+  background: #262626;
+}
