added phone number to top of navbar

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,4 +1,4 @@
-<h5 id="nav-address">507 Broad Street | Chattanooga, TN 37402 </h5>
+<h5 id="nav-address">507 Broad Street | Chattanooga, TN 37402  | (423)-682-7835 </h5>
 
 <nav class="navbar navbar-expand-sm navbar-dark" style="background: black; color: white;">
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#nav-content" aria-controls="nav-content" aria-expanded="false" aria-label="Toggle navigation">
