--- a/app/views/main/home.html.erb
+++ b/app/views/main/home.html.erb
@@ -1,7 +1,9 @@
 <% content_for :head do %>
   <meta name="turbolinks-cache-control" content="no-cache">
 <% end %>
-
+<head>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  </head
 <%= render 'layouts/header' %>
 
 <div class="row">
