--- a/app/views/main/home.html.erb
+++ b/app/views/main/home.html.erb
@@ -3,7 +3,7 @@
 <% end %>
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  </head
+</head>
 <%= render 'layouts/header' %>
 
 <div class="row">
