--- a/app/views/main/tequila.html.erb
+++ b/app/views/main/tequila.html.erb
@@ -1,7 +1,7 @@
 <h1 class="menu-title"> Beer</h1>
 
 <div class="row">
-  <div class="column">
+  <div class="col-sm-6">
 <h2 class= "menu-head">Draft Domestic </br> 18 oz $4.00</h2>
 
   <% @draft_ds.each do |draft_d| %>
@@ -13,7 +13,7 @@
   <% end %>
 </div>
 
-<div class="column">
+<div class="col-sm-6">
 <h2 class="menu-head"> Draft Imports </br> 18oz. $4.50</h2>
 
   <% @draft_is.each do |draft_i| %>
@@ -28,7 +28,7 @@
 </div>
 
 <div class="row">
-  <div class="column">
+  <div class="col-sm-6">
 <h2 class= "menu-head">Bottle Domestic </br> $4.50</h2>
 
   <% @bottle_ds.each do |bottle_d| %>
@@ -40,7 +40,7 @@
   <% end %>
 </div>
 
-<div class="column">
+<div class="col-sm-6">
 <h2 class="menu-head"> Bottle Imports </br> $5.00</h2>
 
   <% @bottle_is.each do |bottle_i| %>
@@ -60,7 +60,7 @@
 <h2 class="menu-title"> Wine</h2>
 
 <div class="row">
-  <div class="column">
+  <div class="col-sm-6">
 <h2 class= "menu-head">White</h2>
 
 
@@ -84,7 +84,7 @@
   <% end %>
 </div>
 
-<div class="column">
+<div class="col-sm-6">
 <h2 class="menu-head"> Red</h2>
 
 <table class="menu">
@@ -113,7 +113,7 @@
 <h2 class="menu-title"> Sangria</h2>
 
 <div class="row">
-  <div class="column">
+  <div class="col-sm-6">
 <h2 class= "menu-head">White</h2>
 
 <div class="container">
@@ -130,7 +130,7 @@
 </div>
 </div>
 
-<div class="column">
+<div class="col-sm-6">
 <h2 class="menu-head"> Red</h2>
 
 <div class="container">
