removed turbo links from application

--- a/app/views/main/dinner.html.erb
+++ b/app/views/main/dinner.html.erb
@@ -1,3 +1,7 @@
+<head>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+</head>
+
 <p id="notice"><%= notice %></p>
 
 <h1 class="menu-title">Dinner Menu</h1>
