--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,7 @@
 <html>
 
   <head>
-    
+
     <%= csrf_meta_tags %>
       <% if content_for?(:head) %>
     <%= yield(:head) %>
@@ -11,8 +11,8 @@
   <%= display_meta_tags %>
 
 
-    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <%= stylesheet_link_tag    'application', media: 'all' %>
+    <%= javascript_include_tag 'application' %>
 
   </head>
 
