--- a/app/views/main/brunch.html.erb
+++ b/app/views/main/brunch.html.erb
@@ -1,3 +1,8 @@
+<head>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+</head>
+
+
 <h1 class="menu-title">Brunch Menu</h1>
 
 <h2 class="menu-head"> Huevos (Eggs)</h2>
