changed buttons on menu page to danger

--- a/app/views/main/menu.html.erb
+++ b/app/views/main/menu.html.erb
@@ -8,7 +8,7 @@
     <div class="card text-center">
     <%= image_tag 'food01.jpg' %>
       <div class="card-block">
-      <%= link_to "Dinner", dinner_path, class: "btn btn-warning" %>
+      <%= link_to "Dinner", dinner_path, class: "btn btn-danger" %>
   </div>
 </div>
 
@@ -21,7 +21,7 @@
     <div class="card text-center">
     <%= image_tag 'food02.jpg' %>
       <div class="card-block">
-      <%= link_to "Lunch", lunch_path, class: "btn btn-warning" %>
+      <%= link_to "Lunch", lunch_path, class: "btn btn-danger" %>
               <p class="card-text">Mon-Fri 11AM-3PM</p>
 
   </div>
@@ -34,7 +34,7 @@
     <div class="card text-center">
     <%= image_tag 'food03.jpg' %>
       <div class="card-block">
-      <%= link_to "Brunch", brunch_path, class: "btn btn-warning" %>
+      <%= link_to "Brunch", brunch_path, class: "btn btn-danger" %>
               <p class="card-text">Sat & Sun 9AM-3PM</p>
 
   </div>
@@ -46,7 +46,7 @@
     <div class="card text-center">
     <%= image_tag 'food04.jpg' %>
       <div class="card-block">
-      <%= link_to "Dessert", dessert_path, class: "btn btn-warning" %>
+      <%= link_to "Dessert", dessert_path, class: "btn btn-danger" %>
   </div>
 </div>
 </div>
@@ -56,7 +56,7 @@
     <div class="card text-center">
     <%= image_tag 'food02.jpg' %>
       <div class="card-block">
-      <%= link_to "Drinks", drinks_path, class: "btn btn-warning" %>
+      <%= link_to "Drinks", drinks_path, class: "btn btn-danger" %>
   </div>
 </div>
 </div>
