added menu heads to bottom of home page

--- a/app/views/main/home.html.erb
+++ b/app/views/main/home.html.erb
@@ -114,7 +114,7 @@
     <div class="col-sm-3">
       <div class="card text-center">
         <div class="card block">
-          <h4 class="card-title">Visit Us!</h4>
+          <h4 class="menu-head">Visit Us!</h4>
           <p class="card-text">507 Broad Street
 Chattanooga, TN 37402</p>
 
@@ -126,7 +126,7 @@ Chattanooga, TN 37402</p>
     <div class="col-sm-3">
       <div class="card text-center">
         <div class="card block">
-          <h4 class="card-title">Hours</h4>
+          <h4 class="menu-head">Hours</h4>
           <p class="card-title">Mon - Thur</p>
           <p class="card-text">11AM - 10PM</p>
           <p class="card-title">Friday</p>
@@ -143,11 +143,11 @@ Chattanooga, TN 37402</p>
     <div class="col-sm-3">
       <div class="card text-center">
         <div class="card block">
-          <h4 class="card-title">Contact Us!</h4>
+          <h4 class="menu-head">Contact Us!</h4>
           <a class="btn btn-danger btn-xlg" href="tel:423-682-7835" style="padding:15px;">
           Call <span class="glyphicon glyphicon-earphone" style="padding-left:0px; padding-right:0px;"></span>423-682-7835
           </a>
-          <p class="card-title">Join Our Team!</p>
+          <p class="menu-head">Join Our Team!</p>
           <%= link_to "Apply Now", apply_path, class: "btn btn-danger" %>
 
 
@@ -159,7 +159,7 @@ Chattanooga, TN 37402</p>
     <div class="col-sm-3">
       <div class="card text-center">
         <div class="card block">
-          <h4 class="card-title">Follow Us!</h4>
+          <h4 class="menu-head">Follow Us!</h4>
     <div class="container">
     <%= image_tag 'facebook.png' %>
     <%= image_tag 'twitter.png' %>
