centered text under nachos

--- a/app/views/main/dinner.html.erb
+++ b/app/views/main/dinner.html.erb
@@ -51,7 +51,7 @@
 
 
 <h2 class="menu-head">Favorite Dips</h2>
-<h4>Served with Tri Color Tortilla Chips</h4>
+<h4 id="nacho">Served with Tri Color Tortilla Chips</h4>
 
   <% @dips.each do |dip| %>
   <table class="menu">
