reformated table for soups

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -217,3 +217,17 @@ iframe {
 .soup {
   width: 100%;
 }
+
+.soup-name {
+  width: 80%;
+}
+
+.cup {
+  width: 10%;
+  text-align: right;
+}
+
+.bowl {
+  width: 10%;
+  text-align: right;
+}
