--- a/app/views/main/dinner.html.erb
+++ b/app/views/main/dinner.html.erb
@@ -39,9 +39,9 @@
 
 <table class="soup">
       <tr>
-      <th class="wine"><p class="card-title"></p> </th>
-      <th class="glass"><p class="glass">Cup</p></th>
-      <th class="bottle"><p class="bottle">Bowl</p></th>
+      <th class="soup-name"><p class="card-title"></p> </th>
+      <th class="cup"><p class="glass">Cup</p></th>
+      <th class="bowl"><p class="bottle">Bowl</p></th>
     </tr>
 </table>
 
@@ -49,9 +49,9 @@
   <% @soups.each do |soup| %>
   <table class="soup">
     <tr>
-      <th class="wine"><p class="card-title"><%= soup.title %></p></th>
-      <th class="glass"><p class="glass">$<%= soup.price %></p></th>
-      <th class="bottle"><p class="bottle">$<%= soup.label %></p></th>
+      <th class="soup-name"><p class="card-title"><%= soup.title %></p></th>
+      <th class="cup"><p class="glass">$<%= soup.price %></p></th>
+      <th class="bowl"><p class="bottle">$<%= soup.label %></p></th>
     </tr>
   </table>
   <% end %>
