corrected lower case letter on home page

--- a/app/views/main/home.html.erb
+++ b/app/views/main/home.html.erb
@@ -58,7 +58,7 @@
       <div class="card text-center">
         <div class="card block">
           <h4 class="card-title">Lunch</h4>
-          <p class="card-text">Monday - Friday 11Am - 3PM!</p>
+          <p class="card-text">Monday - Friday 11AM - 3PM!</p>
           <div class="container">
          <%= link_to "Lunch", lunch_path, class: "btn btn-danger" %>
        </div>
