added letter spacing to card title class

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -71,6 +71,7 @@ h1, h2, h3, h4, h5, h6, p, a {
 .card-title {
    font: 100 25px/1.5 Times New Roman;
    text-shadow: -1px 0 white, 0 1px white, 1px 0 white, 0 -1px white;
+   letter-spacing: 3px;
     color: white;
     padding-left: 15px;
 
