--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -66,6 +66,7 @@ h1, h2, h3, h4, h5, h6, p, a {
   text-align: center;
   padding-top: 15px;
   padding-bottom: 15px;
+  letter-spacing: 2px;
 }
 
 .card-title {
@@ -111,6 +112,7 @@ form {
     border-top:  black;
     border-color: white;
     text-align: center;
+    letter-spacing: 2px;
 }
 
 .logo {
