--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,5 +1,8 @@
 <h5 id="nav-address">507 Broad Street | Chattanooga, TN 37402  | Phone: (423)-682-7835 Fax: (423)-682-7836 </h5>
 
+<div class="row">
+<div class="col-sm-2"></div>
+<div class="col-sm-6">
 <nav class="navbar navbar-expand-sm navbar-dark" style="background: black; color: white;">
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#nav-content" aria-controls="nav-content" aria-expanded="false" aria-label="Toggle navigation">
 <span class="navbar-toggler-icon"></span>
@@ -45,3 +48,5 @@
 
 
 </nav>
+</div>
+</div>
