--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -4,8 +4,22 @@
 
 
 body {
-  background: black;
+  background: black; 
+  /* For browsers that do not support gradients */
+  
+  background: -webkit-radial-gradient(black, gray); 
+  /* Safari 5.1 to 6.0 */
+  
+  background: -o-radial-gradient(black, gray); 
+  /* For Opera 11.6 to 12.0 */
+  
+  background: -moz-radial-gradient(black, gray); 
+  /* For Firefox 3.6 to 15 */
+  
+  background: radial-gradient(black, gray);
+   /* Standard syntax */
 }
+
 
 h1, h2, h3, h4, h5, h6, p, a {
   color: white;
@@ -52,7 +66,7 @@ h1, h2, h3, h4, h5, h6, p, a {
 }
 
 .card {
-    background: black;
+    background: none;
     }
 
 .menu-head {
