--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -3,7 +3,7 @@
 <div class="row">
 <div class="col-sm-3"></div>
 <div class="col-sm-6">
-<nav class="navbar navbar-expand-sm navbar-dark" style="background: black; color: white;">
+<nav class="navbar navbar-expand-sm navbar-dark" style="background: none; color: white;">
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#nav-content" aria-controls="nav-content" aria-expanded="false" aria-label="Toggle navigation">
 <span class="navbar-toggler-icon"></span>
 </button>
