--- a/app/views/main/home.html.erb
+++ b/app/views/main/home.html.erb
@@ -9,7 +9,7 @@
 <div class="row">
   <div class="col-sm-3"></div>
   <div class="col-sm-6">
-    <%= image_tag 'mayan-logo1.jpg', class: 'img-fluid' %>
+    <%= image_tag 'mayan-logo1.jpg', height: 200, width: 400, class: 'img-fluid' %>
   </div>
 </div>
 
