--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -49,7 +49,7 @@
 
 </ul>
 
-<a class="navbar-brand" href="/"><%= image_tag 'monkey.png', height: 100, width: 100 %></a>
+<a class="navbar-brand" href="/"><%= image_tag 'monkey2.png', height: 100, width: 100 %></a>
 
 
 </nav>
