--- a/app/views/main/home.html.erb
+++ b/app/views/main/home.html.erb
@@ -4,9 +4,10 @@
 <% end %>
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
-</head>
-<%= render 'layouts/header' %>
 
+<%= render 'layouts/header' %>
+</head>
+<body>
 <div class="row">
   <div class="col-sm-3"></div>
   <div class="col-sm-6">
@@ -36,7 +37,7 @@
     </script>
   </div>
 </div>
-
+</div>
   <h1 class="menu-title">Check Out Our Menus!</h1>
 
 <div class="container">
@@ -169,3 +170,4 @@ Chattanooga, TN 37402</p>
     </div>
 
 </div>
+</body>
