--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -13,7 +13,7 @@
 
 <!-- Links -->
 <div class="collapse navbar-collapse" id="nav-content">   
-  <ul class="navbar-nav">
+  <ul class="navbar-nav navbar-center">
     <li class="nav-item">
     	<%= link_to "Home", root_path, class: "btn btn-primary" %>
 
