changed contact to call

--- a/app/views/main/home.html.erb
+++ b/app/views/main/home.html.erb
@@ -144,7 +144,7 @@ Chattanooga, TN 37402</p>
     <div class="col-sm-3">
       <div class="card text-center">
         <div class="card block">
-          <h4 class="menu-head">Contact Us!</h4>
+          <h4 class="menu-head">Call Us!</h4>
           <a class="btn btn-danger btn-xlg" href="tel:423-682-7835" style="padding:15px;">
           Call <span class="glyphicon glyphicon-earphone" style="padding-left:0px; padding-right:0px;"></span>423-682-7835
           </a>
