--- a/app/views/main/home.html.erb
+++ b/app/views/main/home.html.erb
@@ -40,72 +40,66 @@
 </div>
   <h1 class="menu-title">Check Out Our Menus!</h1>
 
+<div class="row">
 <div class="container">
-    <div class="col-sm-12">
+  <div class="row">
+
+    <div class="col-md-6">
       <div class="card text-center">
         <div class="card block">
-          <h4 class="card-title">Dinner</h4>
+          <a href="dinner"><h4 class="card-title">Dinner</h4></a>
           <p class="card-text">Starts Every Day At 3!</p>
-         <div class="container">
-         <%= link_to "Dinner", dinner_path, class: "btn btn-danger" %>
-          </div>
         </div>
       </div>
     </div>
-</div>
 
-<div class="container">
-    <div class="col-sm-12">
+
+    <div class="col-md-6">
       <div class="card text-center">
         <div class="card block">
-          <h4 class="card-title">Lunch</h4>
+          <a href="lunch"><h4 class="card-title">Lunch</h4></a>
           <p class="card-text">Monday - Friday 11AM - 3PM!</p>
-          <div class="container">
-         <%= link_to "Lunch", lunch_path, class: "btn btn-danger" %>
-       </div>
         </div>
       </div>
     </div>
 </div>
+</div>
+</div>
 
+<div class="row">
 <div class="container">
-    <div class="col-sm-12">
+  <div class="row">
+
+    <div class="col-md-6">
       <div class="card text-center">
         <div class="card block">
-          <h4 class="card-title">Brunch</h4>
+          <a href="brunch"><h4 class="card-title">Brunch</h4></a>
           <p class="card-text">Saturday & Sunday 9AM - 3PM!</p>
-         <div class="container">
-         <%= link_to "Brunch", brunch_path, class: "btn btn-danger" %>
-        </div>
         </div>
       </div>
     </div>
+
+    <div class="col-md-6">
+      <div class="card text-center">
+        <div class="card block">
+          <a href="dessert"><h4 class="card-title">Dessert</h4></a>
+          <p class="card-text">All Day Long!</p>
+        </div>
+      </div>
+    </div>
+</div>
+</div>
 </div>
 
 <div class="container">
     <div class="col-sm-12">
       <div class="card text-center">
         <div class="card block">
-          <h4 class="card-title">Dessert</h4>
-         <div class="container">
-         <%= link_to "Dessert", dessert_path, class: "btn btn-danger" %>
-       </div>
+        <a href="drinks">  <h4 class="card-title">Drinks</h4></a>
         </div>
       </div>
     </div>
 </div>
-
-<div class="container">
-    <div class="col-sm-12">
-      <div class="card text-center">
-        <div class="card block">
-          <h4 class="card-title">Drinks</h4>
-         <div class="container">
-         <%= link_to "Drinks", drinks_path, class: "btn btn-danger" %>
-       </div>
-        </div>
-      </div>
-    </div>
 </div>
 
 <h1 class="menu-title">About Us</h1>
