--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -42,7 +42,7 @@
     </li>
 
     <li class="nav-item">
-      <%= link_to "Contact Us", contact_path , class: "btn btn-primary" %>
+      <%= link_to "Contact", contact_path , class: "btn btn-primary" %>
 
     </li>
 
